<resources>
    <string name="app_name">SmartLabs</string>

    <!-- START Strings for On Boarding Screen -->
    <!--Titles-->
    <string name="first_slide_title">Анализы</string>
    <string name="second_slide_title">Уведомления</string>
    <string name="third_slide_title">Мониторинг</string>

    <!--Descriptions-->
    <string name="first_slide_desc">Экспресс сбор и получение проб</string>
    <string name="second_slide_desc">Вы быстро узнаете о результатах</string>
    <string name="third_slide_desc">Наши врачи всегда наблюдают за вашими показателями здоровья</string>

    <!--Buttons-->
    <string name="skip_btn">Пропустить</string>
    <string name="finish_btn">Завершить</string>
    <!-- END Strings for On Boarding Screen -->

    <!-- START  SignIn Screen -->
    <string name="signin_title_text">Добро пожаловать!</string>
    <string name="signin_description_text">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="signin_entry_email_text">Вход по E-mail</string>
    <string name="signin_entry_hint_text">example@email.com</string>
    <string name="signin_signin_text">Далее</string>
    <string name="signin_entry_with_text">Иди войдите с помощью</string>
    <string name="signin_with_yandex_text">Войти с Яндекс</string>
    <string name="code_with_email_text">Введите код из E-mail</string>
    <!-- END  SignIn Screen -->
    <!-- CodeScreen -->
    <string name="title_code_screen_create">Создайте пароль</string>
    <string name="description_code_screen">Для защиты Ваших персональных данных</string>
    <string name="title_code_screen">Введите пароль</string>
    <string name="code_1">1</string>
    <string name="code_2">2</string>
    <string name="code_3">3</string>
    <string name="code_4">4</string>
    <string name="code_5">5</string>
    <string name="code_6">6</string>
    <string name="code_7">7</string>
    <string name="code_8">8</string>
    <string name="code_9">9</string>
    <string name="code_0">0</string>

    <!-- Bottom nav menu -->
    <string name="bottom_nav_main">Анализы</string>
    <string name="bottom_nav_result">Результаты</string>
    <string name="bottom_nav_support">Поддержка</string>
    <string name="bottom_nav_profile">Профиль</string>
    <string name="search_hint_main_fragment">Искать анализы</string>
    <string name="main_fragment_title_news_block">Акции и новости</string>
    <string name="title_text_example">Заголовок</string>
    <string name="text_price_example">9999</string>
    <string name="rus_rub">₽</string>
    <string name="description_text_example">Описание</string>
    <string name="main_fragment_title_catalog_block">Каталог анализов</string>
    <string name="cotalog_tovar_add_text">Добавить</string>


</resources>