<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="152dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/news_item_background">
    
    <ImageView
        android:id="@+id/image"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/first_slide_img"
        android:scaleType="fitEnd"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_text_example"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textColor="@color/white"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/price"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="14dp"
        android:text="@string/description_text_example"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/white"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="14dp"
        android:text="@string/text_price_example"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textColor="@color/white"
        android:textSize="19sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="4dp"
        android:text="@string/rus_rub"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textColor="@color/white"
        android:textSize="19sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>