<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/catalog_tovar_item_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_text_example"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/price"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/description_text_example"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textColor="@color/smartlab_grey"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/text_price_example"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/rus_rub"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="96dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/btn_blue"
        android:text="@string/cotalog_tovar_add_text"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>