<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeScreen">

    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/skip_btn"
        android:textColor="@color/smartlab_blue"
        android:textSize="15sp"
        android:fontFamily="@font/sf_pro_display_regular"/>

    <TextView
        android:id="@+id/titleScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_code_screen_create"
        style="@style/TextTitleScreen_SF_24sp"/>
    <TextView
        android:id="@+id/descriptionScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleScreen"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/description_code_screen"
        style="@style/TextGrey_SF_15sp"/>

    <!-- Code indicator -->
    <LinearLayout
        android:id="@+id/entryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/descriptionScreen"
        app:layout_constraintBottom_toTopOf="@id/keyboard_code"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/code_1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/onboardong_indicator_inactive"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="6dp"/>

        <ImageView
            android:id="@+id/code_2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/onboardong_indicator_inactive"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"/>

        <ImageView
            android:id="@+id/code_3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/onboardong_indicator_inactive"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"/>

        <ImageView
            android:id="@+id/code_4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/onboardong_indicator_inactive"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="6dp"/>
    </LinearLayout>
    <!-- Code keyboard -->
    <LinearLayout
        android:id="@+id/keyboard_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="30dp"
        android:gravity="center">
        <!-- 1-3 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_1"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_1"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_2"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_2"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_3"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_3"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
        </LinearLayout>
        <!-- 4-5 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_4"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_4"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_5"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_5"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_6"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_6"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
        </LinearLayout>
        <!-- 7-9 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_7"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_7"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_8"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_8"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_9"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_9"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
        </LinearLayout>
        <!-- 0 and del -->
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:gravity="center"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key_code_0"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:text="@string/code_0"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="24sp"
                android:textColor="@color/code_screen_text_keyboard"
                android:background="@drawable/code_screen_keyboard_active"
                android:shadowDx="0"
                android:shadowDy="0"/>
            <LinearLayout
                android:id="@+id/key_code_del"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="12dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="24dp"
                    android:layout_margin="12dp"
                    android:src="@drawable/del_icon"
                    android:shadowDx="0"
                    android:shadowDy="0"/>
            </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>