<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_grey"
            android:inputType="text"
            android:paddingStart="45dp"
            android:paddingEnd="5dp"
            android:hint="@string/search_hint_main_fragment"
            android:textColorHint="@color/smartlab_grey"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:autofillHints="" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/search_ico"
            android:layout_marginTop="14dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/app_name"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/news_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_fragment_title_news_block"
                style="@style/TextTitleGrey_SF_17sp"
                android:layout_marginStart="20dp"/>
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/indicatorNewsLoad"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:visibility="invisible"
                android:indeterminate="true"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="3"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/news_item"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/catalog_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_fragment_title_catalog_block"
                style="@style/TextTitleGrey_SF_17sp"
                android:layout_marginStart="20dp"/>
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/indicatorCatalogLoad"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:visibility="invisible"
                android:indeterminate="true"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_CatalogType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="7"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/type_catalog_item"
            android:layout_marginBottom="24dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_CatalogTovar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:itemCount="3"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/catalog_tovar_item"/>
    </LinearLayout>

</LinearLayout>